--- a/html/helpworkers/approcal.html
+++ b/html/helpworkers/approcal.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="../../css/public.css">
 		<link rel="stylesheet" href="../../css/commons.css"/>
 		<link rel="stylesheet" href="../approval/approvalPendingList.css" />
+		<link rel="stylesheet" href="../../css/scale.css" type="text/css" />
 		<script src="../../js/commons.js" ></script> 
 		<script src="../../js/summer.js" ></script>		
 		<script src="../../js/config.js" ></script>		
@@ -29,7 +30,7 @@
 		<div class="um-win" id="index">
 			<div id="header" class="um-header">
                <div id="backContainer" style="width: 30%">
-					<a href="#"  class="headerText backup" onclick="backClick()">&nbsp;返回</a>
+					<a href="#"  class="headerText backup" onclick="backClick()">返回</a>
 				</div>
 				<div id="titleContainer" style="width:40%">
 					<h3>审批</h3>
@@ -306,5 +307,19 @@
 				
 			</div>
 		</div>
+		<section class="imgzoom_pack">
+	        <div class="imgzoom_x"></div>
+	        <div class="imgzoom_img">
+		        <img src="" />
+	        </div>
+	    </section>
+	    <script src="../../js/scale.js"></script>
+	    <script>
+	        document.addEventListener("DOMContentLoaded", function(event){
+	            ImagesZoom.init({
+	                "elem": "#list"
+	            });
+	        }, false);
+	    </script>
 	</body>
 </html>
