--- a/html/massessecurity/approvalPendingList.html
+++ b/html/massessecurity/approvalPendingList.html
@@ -7,9 +7,9 @@
 	<meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">    
 
     <link rel="stylesheet" href="../../js/ydui/ydui.px.css">
-	<link rel="stylesheet" href="https://unpkg.com/cube-ui/lib/cube.min.css">
+	<link rel="stylesheet" href="../../css/cube.min.css">
 
-	<script src="../../js/commons.js" ></script> 
+	<script src="../../js/commons.js" ></script>  
 	<script src="../../js/jquery.min.js" ></script>
 	<script src="../../js/summer.js" ></script>
 	<script src="../../js/Frameworks/iuapmobile.frameworks.ui.js" ></script>
@@ -129,9 +129,9 @@
 <body>
 <div id="app">
 	<template>
-	    <yd-navbar title="问题列表" bgcolor="#d72424" height="64px" color="#FFFFFF" fixed="true">
+	    <yd-navbar title="问题列表" bgcolor="#d72424" height="64px" fontsize="16px" color="#FFFFFF" fixed="true">
 	        <router-link to="#" slot="left" @click="backFunc">
-	            <yd-navbar-back-icon color="#ffffff">&nbsp;返回</yd-navbar-back-icon>
+	            <yd-navbar-back-icon color="#ffffff">返回</yd-navbar-back-icon>
 	        </router-link>
 	        <router-link to="#" slot="right">
 	        	<div @click="addFunc" id="addsupervisionProblemBtn" style="display: none">新增</div>
@@ -211,14 +211,14 @@
     		
     		-->
 	        <span slot="doneTip">已加载全部数据</span>
-	        <img slot="loadingTip" src="http://static.ydcss.com/uploads/ydui/loading/loading10.svg"/>
+	        <img slot="loadingTip" src="../../img/loading10.svg"/>
 	    </yd-infinitescroll>
     </yd-pullrefresh>
 	</template>
 </div>
 <script src="../../js/ydui/vue.min.js"></script>
 <script src="../../js/ydui/ydui.px.js"></script>
-<script src="https://unpkg.com/cube-ui/lib/cube.min.js"></script>
+<script src="../../js/cube.min.js"></script>
 <script>
 	const actionList = [{text:"申请",value:"approval"},{text:"我发起的",value:"launched"}];
 
@@ -269,7 +269,6 @@
 		     * 获取数据 
 		     */
             loadList:function(){
-            	console.log("method >> loadList");
   				var jsonData = {};
 				jsonData.userId = localStorage.userid;
 				jsonData.pageIndex = this.page+"";
@@ -289,7 +288,6 @@
 					type:'get',
 					url:serviceUrl+'/massesSecurity/myDrafesList?userId='+userId+'&pageIndex='+this.page+'&pageSize='+this.pageSize,
 					success:function(res){
-						console.log(res);
 						var draftFlag = res.rsMap.draftFlag;
 						if(draftFlag){
 							$("#addsupervisionProblemBtn").show();
@@ -329,7 +327,6 @@
 						_this.page++;
 					},
 					error:function(er){
-						console.log(er)
 					}
 				});
             } 
