--- a/html/studyaid/launched.html
+++ b/html/studyaid/launched.html
@@ -26,7 +26,7 @@
     	-->
     	<link rel="stylesheet" href="./../mywork/listview.css">
 	    <link rel="stylesheet" href="../../js/ydui/ydui.px.css">
-		<link rel="stylesheet" href="https://unpkg.com/cube-ui/lib/cube.min.css">
+		<link rel="stylesheet" href="../../css/cube.min.css">
 	
 		<script src="../../js/commons.js" ></script> 
 		<script src="../../js/jquery.min.js" ></script>
@@ -107,9 +107,9 @@
 	<body>
 		<div id="app" style="padding-top: 1px;">
 		<template>
-		    <yd-navbar title="我发起的" bgcolor="#d72424" height="64px" color="#FFFFFF" fixed="true">
+		    <yd-navbar title="我发起的" bgcolor="#d72424" height="64px" fontsize="16px" color="#FFFFFF" fixed="true">
 		        <router-link to="#" slot="left" @click="backFunc">
-		            <yd-navbar-back-icon color="#ffffff">&nbsp;返回</yd-navbar-back-icon>
+		            <yd-navbar-back-icon color="#ffffff">返回</yd-navbar-back-icon>
 		        </router-link>
 		        <router-link to="#" slot="right">
 		        	<!--<div @click="showActive">申请</div>-->
@@ -152,14 +152,14 @@
 	    		</div>
 		
 		        <span slot="doneTip">已加载全部数据</span>
-		        <img slot="loadingTip" src="http://static.ydcss.com/uploads/ydui/loading/loading10.svg"/>
+		        <img slot="loadingTip" src="../../img/loading10.svg"/>
 		    </yd-infinitescroll>
 		</yd-pullrefresh>
 		</template>
 	</div>
 	<script src="../../js/ydui/vue.min.js"></script>
 	<script src="../../js/ydui/ydui.px.js"></script>
-	<script src="https://unpkg.com/cube-ui/lib/cube.min.js"></script>
+	<script src="../../js/cube.min.js"></script>
 	<script>
 		//const actionList = [{text:"申请",value:"approval"},{text:"我发起的",value:"launched"}];
 		var userId = localStorage.userid;
@@ -192,11 +192,11 @@
 			        localStorage.addOrUpdate = 'update';
 			        if(item.approvalState == 'DRAFT'){
 				        localStorage.title = '编辑';
-				        forword("approval","html/studyaid/drafes.html"); 
+				        forword("approval"+localStorage.approvalId,"html/studyaid/drafes.html"); 
 			        }else{
 			        	localStorage.xuanze = "SAVIEW";
 			        	localStorage.title = '详情';
-			        	forword("approval","html/studyaid/approval.html");
+			        	forword("approval"+localStorage.approvalId,"html/studyaid/approval.html");
 			        }
 			    },
 	            /**
@@ -250,7 +250,6 @@
 			     * 获取数据 
 			     */
 	            loadList:function(){
-	            	console.log("method >> loadList");
 					this.getDataList();
 					
 	            },
@@ -263,8 +262,6 @@
 						type:'GET',
 						url:serviceUrl+'/studyAid/myDrafesList?userId='+userId+'&pageIndex='+this.page+'&pageSize='+this.pageSize,
 						success:function(res){
-							console.log(res);
-							
 							if(res.sCode != 200){
 								return;
 							}
