--- a/html/workersappeal/appealList.html
+++ b/html/workersappeal/appealList.html
@@ -29,7 +29,7 @@
 		<script src="./appealList.js"></script>
 		-->
 		<link rel="stylesheet" href="../../js/ydui/ydui.px.css">
-		<link rel="stylesheet" href="https://unpkg.com/cube-ui/lib/cube.min.css">
+		<link rel="stylesheet" href="../../css/cube.min.css">
 	
 		<script src="../../js/commons.js" ></script> 
 		<script src="../../js/jquery.min.js" ></script>
@@ -119,9 +119,9 @@
 			<img src="../../img/minShengTongDao.png" / style="width: 100%;">
 		</div>
 		<template>
-		    <yd-navbar title="职工诉求" bgcolor="#d72424" height="64px" color="#FFFFFF" fixed="true">
+		    <yd-navbar title="职工诉求" bgcolor="#d72424" height="64px" fontsize="16px" color="#FFFFFF" fixed="true">
 		        <router-link to="#" slot="left" @click="backFunc">
-		            <yd-navbar-back-icon color="#ffffff">&nbsp;返回</yd-navbar-back-icon>
+		            <yd-navbar-back-icon color="#ffffff">返回</yd-navbar-back-icon>
 		        </router-link>
 		        <router-link to="#" slot="right">
 		        	<div @click="showActive">我要提报</div>
@@ -154,14 +154,14 @@
 		            </ul>
 	    		</div>
 		        <span slot="doneTip">已加载全部数据</span>
-		        <img slot="loadingTip" src="http://static.ydcss.com/uploads/ydui/loading/loading10.svg"/>
+		        <img slot="loadingTip" src="../../img/loading10.svg"/>
 		    </yd-infinitescroll>
 		</yd-pullrefresh>
 		</template>
 	</div>
 	<script src="../../js/ydui/vue.min.js"></script>
 	<script src="../../js/ydui/ydui.px.js"></script>
-	<script src="https://unpkg.com/cube-ui/lib/cube.min.js"></script>
+	<script src="../../js/cube.min.js"></script>
 	<script>
 		const actionList = [{text:"申请",value:"approval"},{text:"我发起的",value:"launched"}];
 		var userId = localStorage.userid;
@@ -236,7 +236,6 @@
 			     * 获取数据 
 			     */
 	            loadList:function(){
-	            	console.log("method >> loadList");
 					this.getDataList();
 					
 	            },
@@ -249,8 +248,6 @@
 						type:'post',
 						url:serviceUrl+'/workersAppeal/getPublishList?userId='+userId+'&pageIndex='+this.page+'&pageSize='+this.pageSize,
 						success:function(res){
-							console.log(res);
-							
 							if(res.sCode != 200){
 								return;
 							}
