--- a/html/workersappeal/releaseList.html
+++ b/html/workersappeal/releaseList.html
@@ -19,7 +19,7 @@
 		<div class="um-win" id="index">
 			<div id="header" class="um-header">
 				<div id="backContainer" style="width: 30%">
-					<a href="#"  class="headerText backup" onclick="backClick()">&nbsp;返回</a>
+					<a href="#"  class="headerText backup" onclick="backClick()">返回</a>
 				</div>
 				<div id="titleContainer" style="width:40%">
 					<h3>职工诉求</h3>
