--- a/html/goodexample/details.html
+++ b/html/goodexample/details.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="./approval.css" />
 		<link rel="stylesheet" href="../../css/public.css">
 		<link rel="stylesheet" href="../../css/commons.css"/>
+		<link rel="stylesheet" href="../../css/scale.css" type="text/css" />
 		<script src="../../js/commons.js" ></script> 
 		<script src="../../js/summer.js" ></script>		
 		<script src="../../js/jquery.min.js" ></script>
@@ -20,7 +21,7 @@
 		<div class="um-win" id="index">
 			<div id="header" class="um-header">
 				<div id="backContainer" style="width: 30%">
-					<a href="#"  class="headerText backup" onclick="backClick()">&nbsp;返回</a>
+					<a href="#"  class="headerText backup" onclick="backClick()">返回</a>
 				</div>
 				<div id="titleContainer" style="width:40%">
 					<h3>详情</h3>
@@ -182,7 +183,7 @@
 						其他附件
 					</div>
 					<div class="panel-info-img" id="files">
-						<img src="./img/zhuanli.png" />
+						<!--<img src="./img/zhuanli.png" />-->
 					</div>
 				</div>
 				
@@ -212,6 +213,13 @@
 			</div>
 
 		</div>
+		
+		<section class="imgzoom_pack">
+	        <div class="imgzoom_x">X</div>
+	        <div class="imgzoom_img">
+		        <img src="" />
+	        </div>
+	    </section>
 		<script>
 			$(function(){
 				//var approvalId='GE1538888152116';
@@ -228,7 +236,7 @@
 	                contentType: 'application/json;charset=utf-8',
 	                dataType: 'json',
 	                success: function (res) {
-	                console.log(res)
+	                 
 	                	if(res.sCode==200){
 		                	var node=res.rsMap.goodExample;
 		                	$("#subBusiTypeName").text(node.subBusiTypeName);
@@ -277,6 +285,7 @@
                     data:JSON.stringify(obj),
                     contentType: 'application/json;charset=utf-8',
                     dataType: 'json',
+                    async:false,
                     success: function (res) {
                     	if(res.sCode==200){
                     		var fileList=res.rsMap.fileList;
@@ -285,9 +294,9 @@
                     			for(var i=0;i<fileList.length;i++){
                     				var url=fileList[i].url;
                     				if(i == 0){
-	                    				html+='<div class="lookimg" num="0"><img src="'+url+'"></div>';
+	                    				html+='<div class="lookimg" num="0"><div id="list"><img src="'+url+'"></div></div>';
                     				}else{
-	                    				html+='<div class="lookimg" num="0" style="margin-top:10px;"><img src="'+url+'"></div>';
+	                    				html+='<div class="lookimg" num="0" style="margin-top:10px;"><div id="list"><img src="'+url+'"></div></div>';
                     				}
                     			}
                     			//删除之前回显的图片
@@ -343,5 +352,17 @@
 				*/	
 			});
 		</script>
+		
+		
+		
+		<script src="../../js/scale.js"></script>
+	    <script>
+	        document.addEventListener("DOMContentLoaded", function(event){
+	            ImagesZoom.init({
+	                "elem": "#list"
+	            });
+	        }, false);
+	    </script>
+		
 	</body>
 </html>
