--- a/html/mywork/superviseList.html
+++ b/html/mywork/superviseList.html
@@ -26,7 +26,7 @@
 		-->
 		<link rel="stylesheet" href="./../mywork/listview.css">
 	    <link rel="stylesheet" href="../../js/ydui/ydui.px.css">
-		<link rel="stylesheet" href="https://unpkg.com/cube-ui/lib/cube.min.css">
+		<link rel="stylesheet" href="../../css/cube.min.css">
 	
 		<script src="../../js/commons.js" ></script> 
 		<script src="../../js/jquery.min.js" ></script>
@@ -120,9 +120,9 @@
 			</ul>
 		</div>
 		<template>
-		    <yd-navbar title="选人列表" bgcolor="#d72424" height="64px" color="#FFFFFF" fixed="true">
+		    <yd-navbar title="选人列表" bgcolor="#d72424" height="64px" fontsize="16px" color="#FFFFFF" fixed="true">
 		        <router-link to="#" slot="left" @click="backFunc">
-		            <yd-navbar-back-icon color="#ffffff">&nbsp;返回</yd-navbar-back-icon>
+		            <yd-navbar-back-icon color="#ffffff">返回</yd-navbar-back-icon>
 		        </router-link>
 		        <router-link to="#" slot="right">
 		        	<!--<div @click="showActive">申请</div>-->
@@ -160,14 +160,14 @@
 	    		</div>
 		
 		        <span slot="doneTip">已加载全部数据</span>
-		        <img slot="loadingTip" src="http://static.ydcss.com/uploads/ydui/loading/loading10.svg"/>
+		        <img slot="loadingTip" src="../../img/loading10.svg"/>
 		    </yd-infinitescroll>
 		</yd-pullrefresh>
 		</template>
 	</div>
 	<script src="../../js/ydui/vue.min.js"></script>
 	<script src="../../js/ydui/ydui.px.js"></script>
-	<script src="https://unpkg.com/cube-ui/lib/cube.min.js"></script>
+	<script src="../../js/cube.min.js"></script>
 	<script>
 		//const actionList = [{text:"申请",value:"approval"},{text:"我发起的",value:"launched"}];
 		//var userid = '0019bc12-ae09-4872-9c1f-83e5566ddea0';
@@ -306,7 +306,6 @@
 			     * 获取数据 
 			     */
 	            loadList:function(){
-	            	console.log("method >> loadList");
 					this.getDataList();
 					
 	            },
@@ -321,7 +320,6 @@
 						url:serviceUrl+'/workersController/superviseList?pageIndex='+this.page+'&pageSize='+this.pageSize+'&userId='+localStorage.userid+"&queryType="+localStorage.queryType+"&search_searchParam="+name,
 						//url:serviceUrl+'/workersController/superviseList?pageIndex='+this.page+'&pageSize='+this.pageSize+'&userId='+userid+"&queryType="+queryType+"&search_searchParam="+name,
 						success:function(res){
-							console.log(res);
 							if(res.sCode != 200){
 								return;
 							}
