--- a/html/securityproblem/opinion.html
+++ b/html/securityproblem/opinion.html
@@ -32,7 +32,7 @@
         <div class="um-win" id="index">
             <div id="header" class="um-header">
 				<div id="backContainer" style="width: 30%">
-					<a href="#"  class="headerText backup" onclick="backClick()">&nbsp;返回</a>
+					<a href="#"  class="headerText backup" onclick="backClick()">返回</a>
 				</div>
 				<div id="titleContainer" style="width:40%">
 					<h3>整改问题</h3>
