--- a/html/studyaid/drafes.html
+++ b/html/studyaid/drafes.html
@@ -23,7 +23,7 @@
 		<div class="um-win" id="index">
 			<div id="header" class="um-header">
                <div id="backContainer" style="width: 30%">
-					<a href="#"  class="headerText backup" onclick="backClick()">&nbsp;返回</a>
+					<a href="#"  class="headerText backup" onclick="backClick()">返回</a>
 				</div>
 				<div id="titleContainer" style="width:40%">
 					<h3 id="title"></h3>
@@ -256,7 +256,7 @@
 	                    contentType: 'application/json;charset=utf-8',
 	                    dataType: 'json',
 	                    success: function (res) {
-	                    	console.log(res);
+	                    	 
 	                    	if(res.sCode==200){//职工信息
 	                    		var node=res.rsMap.studyAidInfo;
 	                    		//工号
