--- a/html/workersappeal/mylaunch.html
+++ b/html/workersappeal/mylaunch.html
@@ -30,7 +30,7 @@
 		
 		<link rel="stylesheet" href="./../mywork/listview.css">
 	    <link rel="stylesheet" href="../../js/ydui/ydui.px.css">
-		<link rel="stylesheet" href="https://unpkg.com/cube-ui/lib/cube.min.css">
+		<link rel="stylesheet" href="../../css/cube.min.css">
 	
 		<script src="../../js/commons.js" ></script> 
 		<script src="../../js/jquery.min.js" ></script>
@@ -111,9 +111,9 @@
 <body>
 	<div id="app">
 		<template>
-		    <yd-navbar title="我发起的" bgcolor="#d72424" height="64px" color="#FFFFFF" fixed="true">
+		    <yd-navbar title="我发起的" bgcolor="#d72424" height="64px" fontsize="16px" color="#FFFFFF" fixed="true">
 		        <router-link to="#" slot="left" @click="backFunc">
-		            <yd-navbar-back-icon color="#ffffff">&nbsp;返回</yd-navbar-back-icon>
+		            <yd-navbar-back-icon color="#ffffff">返回</yd-navbar-back-icon>
 		        </router-link>
 		        <router-link to="#" slot="right">
 		        	<!--<div @click="showActive">申请</div>-->
@@ -155,14 +155,14 @@
 	    		</div>
 		
 		        <span slot="doneTip">已加载全部数据</span>
-		        <img slot="loadingTip" src="http://static.ydcss.com/uploads/ydui/loading/loading10.svg"/>
+		        <img slot="loadingTip" src="../../img/loading10.svg"/>
 		    </yd-infinitescroll>
 		</yd-pullrefresh>
 		</template>
 	</div>
 	<script src="../../js/ydui/vue.min.js"></script>
 	<script src="../../js/ydui/ydui.px.js"></script>
-	<script src="https://unpkg.com/cube-ui/lib/cube.min.js"></script>
+	<script src="../../js/cube.min.js"></script>
 	<script>
 		//const actionList = [{text:"申请",value:"approval"},{text:"我发起的",value:"launched"}];
 		var userId = localStorage.userid;
@@ -192,7 +192,7 @@
 	            },
 	            toDetails:function(item){
 			    	localStorage.approvalId = item.approvalId;
-       				forword("approval","html/workersappeal/handleDetail.html"); 
+       				forword("approval"+localStorage.approvalId,"html/workersappeal/handleDetail.html"); 
 			    },
 	            /**
 			    showActive() {
@@ -245,7 +245,6 @@
 			     * 获取数据 
 			     */
 	            loadList:function(){
-	            	console.log("method >> loadList");
 					this.getDataList();
 					
 	            },
