--- a/html/xuanChuanFaBu/editNews.html
+++ b/html/xuanChuanFaBu/editNews.html
@@ -7,7 +7,6 @@
 		<link rel="stylesheet" href="../../css/iuapmobile.um.css">
 		<link rel="stylesheet" href="../../css/font-icons.css">	
 		<link rel="stylesheet" href="../../css/base.css" />	
-		<link rel="stylesheet" href="../../css/layout/base.css">
 		<link rel="stylesheet" href="editNews.css" />
 	</head>
 	<body>
@@ -53,6 +52,17 @@
 						<div id="editorBody" class="editor" contenteditable="true" style="-webkit-user-select: auto" placeholder="请输入内容">
 						</div>
 					</div>
+					<div class="um-row panel-info" >
+					
+					<ul id="uploadFileList" class="um-list f14" style="width: 100%;height: 300px;padding: 8px;">
+                  	</ul>
+					
+					<!--
+					<div style="margin-top: 15px;">
+						<img src="../../img/fujian.png" / style="width:25%;">
+					</div>
+					-->
+				</div>
 				</div>
 			</div>
 
