--- a/html/massessecurity/reorganizerHandle.html
+++ b/html/massessecurity/reorganizerHandle.html
@@ -56,7 +56,7 @@
 					</div>
                     <div class="um-row content-container" style="padding-top: 15px;">
 	                   <div class="um-xs-6 um-sm-6 um-md-6 content-key" >
-	                    	复查完成时间<span style="color: red">*</span>
+	                    	整改完成时间<span style="color: red">*</span>
 	                    </div>
 	                    <div class="um-xs-6 um-sm-6 um-md-6 content-value" >
 	                       <input type="text" id="requestTime" style="border: 0px;width: 80%;" placeholder="复查完成时间" data-options="{'type':'YYYY-MM-DD','beginYear':2010,'endYear':2088}" style="width:166px;height:19px;">
