--- a/html/securityproblem/modification.html
+++ b/html/securityproblem/modification.html
@@ -41,7 +41,7 @@
 	                     	整改人
 	                    </div>
 	                    <div class="um-xs-6 um-sm-6 um-md-6 content-value" >
-							<input type="text" id="supervisenName" style="width: 80%;border: 0px;text-align: right" placeholder="输入"/>
+							<input type="text" id="supervisenName" style="width: 80%;border: 0px;text-align: right;font-size: 13px" placeholder="输入"/>
 	                    </div>
                     </div>
                     <div class="um-row content-container" style="padding-top: 15px;">
@@ -49,7 +49,7 @@
 	                     	复查人
 	                    </div>
 	                    <div class="um-xs-6 um-sm-6 um-md-6 content-value" onclick="rectificationName('fc','spSafetyReview','SP','AJ')">
-							<span id="supervisenNameFc"></span>
+							<span id="supervisenNameFc" style="font-size: 13px"></span>
 							<input type="hidden" id="superviseIdFc"/>
 							<span class="ti-angle-right"></span>
 	                    </div>
@@ -59,7 +59,7 @@
 	                    	要求整改时间
 	                    </div>
 	                    <div class="um-xs-6 um-sm-6 um-md-6 content-value" >
-	                        <input type="text" id="finishTime" placeholder="请选择要求整改时间" data-options="{'type':'YYYY-MM-DD','beginYear':2010,'endYear':2088}" style="width: 90%;;height:19px;border: 0px;text-align: right">
+	                        <input type="text" id="finishTime" placeholder="请选择要求整改时间" data-options="{'type':'YYYY-MM-DD','beginYear':2010,'endYear':2088}" style="width: 90%;;height:19px;border: 0px;text-align: right;font-size: 13px">
 	                    </div>
 	                </div>
             	</div>
@@ -68,7 +68,7 @@
 						整改要求
 					</div>
 					<div class="consyl">
-						<textarea id="demand" style="width: 100%;" rows="15"></textarea>
+						<textarea id="demand" style="width: 100%;font-size: 13px" rows="15"></textarea>
 					</div>
 				</div>
 				<!--
@@ -94,14 +94,14 @@
 					</div>
 					<div class="um-row content-container">
 	                   <div class="um-xs-6 um-sm-6 um-md-6 content-key" >
-	                    	复查完成时间
+	                    	整改完成时间
 	                    </div>
 	                    <div class="um-xs-6 um-sm-6 um-md-6 content-value" >
-	                        <input type="text" id="requestTime" placeholder="请选择复查完成时间" data-options="{'type':'YYYY-MM-DD','beginYear':2010,'endYear':2088}" style="width: 90%;;height:19px;border: 0px;text-align: right">
+	                        <input type="text" id="requestTime" placeholder="请选择整改完成时间" data-options="{'type':'YYYY-MM-DD','beginYear':2010,'endYear':2088}" style="width: 90%;;height:19px;border: 0px;text-align: right;font-size: 13px">
 	                    </div>
 	                </div>
 	                <div class="consyl">
-						<textarea id="measure" class="form-control" placeholder="请输入整改措施" rows="20" cols="300" style="font-size: 14px;height:120px;"></textarea>
+						<textarea id="measure" class="form-control" placeholder="请输入整改措施" rows="20" cols="300" style="font-size: 14px;height:120px;font-size: 13px"></textarea>
 					</div>
 				</div>
             </div>
