--- a/html/securityproblem/opinion.html
+++ b/html/securityproblem/opinion.html
@@ -44,7 +44,7 @@
             <div class="um-content panel-info-container">
             	<div class="um-row panel-info">
             		<div class="um-xs-6 um-sm-6 um-md-6 content-key" >
-	                    	复查完成时间
+	                    	整改完成时间
                     </div>
                     <div class="um-xs-6 um-sm-6 um-md-6 content-value" >
                         	<input type="text" id="requestTime" placeholder="请选择复查完成时间" data-options="{'type':'YYYY-MM-DD hh:mm:ss','beginYear':2010,'endYear':2088}" style="width: 90%;;height:19px;border: 0px;text-align: right">
