--- a/html/myself/myself.html
+++ b/html/myself/myself.html
@@ -97,7 +97,7 @@
 	                			</div>
 	                		</div>
 	                	</a>
-	                	<a href="#" class="um-list-item" onclick="help();">
+	                	<!--<a href="#" class="um-list-item" onclick="help();">
 	                		<div class="um-list-item-media">
 	                			<img src="../../img/xsbz.png" width=24 class="um-round" alt="">
 	                		</div>
@@ -106,7 +106,7 @@
 	                				新手帮助
 	                			</div>
 	                		</div>
-	                	</a>
+	                	</a>-->
 	                </div>
                 </div>
                 <button onclick="signout();" style="width: 60%;margin: auto;margin-top: 10%;" class="btn um-btn-gray">退出登录</button>
