--- a/html/ebook/mobileEbook.html
+++ b/html/ebook/mobileEbook.html
@@ -11,16 +11,25 @@
 		<script src="../../js/summer.js" ></script>
 		<script src="../../js/jquery.min.js" ></script>
 		<script src="../../js/Frameworks/iuapmobile.frameworks.ui.js" ></script>
-		<script src="mobileEbook.js"></script>
+		<script src="../../js/jquery-md5.js"></script>
 	</head>
 	<body>
 		<div class="um-win" id="index">
-			<div id="header" class="um-header" >
-				<a href="#"  class="um-back" onclick="backClick()">返回</a>
-            	<h3 id="pageTitle">电子书屋</h3>
-			</div>
 			<div class="um-content" id="main">
 			</div>
 		</div>
+		<script>
+			var timestamp = Date.parse(new Date())/1000;
+			var accountKey="AHgBcFBrUWEEclIyWHQEMFczU2oCMAY7CStVKwZ+BWwBcAs/XCxQPlYgB2xdYlNlAWMCNgU+AjBUdlUrVy9QOABiAT9QZ1EnBGpSKlg+BGhXMVNnAjIGNgkrVSsGfgV3AWsLNVxrUCZWOAdsXWZTZQFsAjoFPgI2VGRVMVc+UCs=";
+			var userName= summer.getStorage("lk_username");
+			var sign=$.md5(userName+timestamp.toString()+accountKey);
+			var urlString="https://wk.bookan.com.cn/index.php?op=Authentication.redirect&authType=1&id=21518&userName="+userName+
+						"&time="+timestamp+"&sign="+sign;
+			
+			window.location=urlString;
+			$("head").append('<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">');
+			UM.hideLoadingBar();
+		</script>
+		</script>
 	</body>
 </html>
